# bibadb

./: Cargo.toml  README.md
api/: openapi.yml
biba-core/: Cargo.toml  build.rs
biba-core/src/: lib.rs  main.rs
biba-core/src/grpc/: mod.rs
biba-core/src/rest/: mod.rs
biba-core/src/services/: mod.rs  multiplex.rs
cli/: Cargo.toml  build.rs
cli/src/: cli.rs
proc_macro/: Cargo.toml
utils/: Cargo.toml  gen_openapi.rs
