[package]
name = "utils"
description = "BibaBD: Utility tools"
publish = false
keywords = [ "Biba", "BD" ]
version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "gen-openapi"
path = "gen_openapi.rs"
required-features = [ "gen_api" ]

[dependencies]
biba-core = { path = "../biba-core/", optional = true }
clap = { version = "4.5", features = ["derive"] }

## OpenAPI + Swagger
utoipa = { version = "4.2", features = ["yaml"], optional = true }

[features]
default = [ "gen_api" ]
gen_api = [ "dep:utoipa", "biba-core/swagger"]
